--- a/app/src/main/res/layout/activity_upravljanje.xml
+++ b/app/src/main/res/layout/activity_upravljanje.xml
@@ -37,7 +37,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:scaleType="fitXY"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/imageButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
     />
@@ -48,7 +48,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:scaleType="fitXY"
-        android:layout_above="@+id/imageButton3"
+        android:layout_below="@+id/imageButton"
         android:layout_centerHorizontal="true" />
 
     <SeekBar
