--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,5 +42,11 @@
         android:layout_weight="0.20"
         android:background="#ff2d2d" />
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="254dp"
+        android:id="@+id/btdevices"
+        android:layout_weight="0.93" />
+
 
 </LinearLayout>
