--- a/app/src/main/res/layout/activity_upravljanje.xml
+++ b/app/src/main/res/layout/activity_upravljanje.xml
@@ -52,7 +52,7 @@
         android:layout_centerHorizontal="true" />
 
     <SeekBar
-        android:id="@+id/seekBar"
+        android:id="@+id/PWM"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:progressDrawable="@drawable/seekbar_progressbar"
